--- a/templates/landing/index.html
+++ b/templates/landing/index.html
@@ -24,7 +24,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="author" content="MythicalSystems">
+    <meta name="author" content="ScaleNodes">
     <link rel="apple-touch-icon" href="%SEO_IMAGE%">
     <meta name="twitter:description" content="%SEO_DESCRIPTION%">
     <meta name="twitter:image" content="%SEO_IMAGE%">
@@ -170,9 +170,8 @@
                             <div class="iconfont-wrapper">
                                 <span class="mbr-iconfont mobi-mbri-clock mobi-mbri"></span>
                             </div>
-                            <h5 class="card-title mbr-fonts-style display-7"><strong>Best Uptime</strong></h5>
-                            <p class="card-text mbr-fonts-style display-7">Powered by our staff in germany datacenter.
-                                You can experience 98% uptime with our Services</p>
+                            <h5 class="card-title mbr-fonts-style display-7"><strong>Full Control</strong></h5>
+                            <p class="card-text mbr-fonts-style display-7">Our control panel lets you control every detail of your Minecraft server from the java verison to all f your files here at ScaleNodes we give you Full Control over your server!*</p>
                         </div>
                     </div>
                 </div>
@@ -182,10 +181,8 @@
                             <div class="iconfont-wrapper">
                                 <span class="mbr-iconfont mobi-mbri-to-local-drive mobi-mbri"></span>
                             </div>
-                            <h5 class="card-title mbr-fonts-style display-7"><strong>Powered by excellent
-                                    hardware</strong></h5>
-                            <p class="card-text mbr-fonts-style display-7">All our paid nodes are very fast since they
-                                are runing on blazing fast speeds top of the line hardware!</p>
+                            <h5 class="card-title mbr-fonts-style display-7"><strong>Powered By Modern Hardware</strong></h5>
+                            <p class="card-text mbr-fonts-style display-7">We Don't belive that servers should be running oon old and slow intel xeon's thats why we use AMD Ryzen Servers Using Top of the line hardware**</p>
                         </div>
                     </div>
                 </div>
@@ -196,15 +193,14 @@
                                 <span class="mbr-iconfont mobi-mbri-devices mobi-mbri"></span>
                             </div>
                             <h5 class="card-title mbr-fonts-style display-7"><strong>User Friendly</strong></h5>
-                            <p class="card-text mbr-fonts-style display-7">Our panel and our client area is user
-                                friendly and supports every device that you want to use to manage your server!</p>
+                            <p class="card-text mbr-fonts-style display-7">Our client and server control panel are designed with the user in mind due to such our client and seerver control panel is very easy to navigate</p>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-    <section data-bs-version="5.1" class="people5 mbr-embla cid-trTqE07yMY" id="people5-8">
+   <!-- <section data-bs-version="5.1" class="people5 mbr-embla cid-trTqE07yMY" id="people5-8">
         <div class="position-relative text-center">
             <h3 class="mb-4 mbr-fonts-style display-2">
                 <strong>What Our Fantastic Clients Say</strong>
@@ -278,7 +274,7 @@
                 </button>
             </div>
         </div>
-    </section>
+    </section> -->
     <section data-bs-version="5.1" class="contacts1 cid-trTu7YGFDJ" id="contacts1-a">
         <div class="container">
             <div class="mbr-section-head">
@@ -310,6 +306,10 @@
                 </div>
             </div>
         </div>
+    </section>
+    <section>
+        <div><h6>*We do not allow custom docker images, selfbots, malware, the changing of startup commands, or anything else that may effect our services</h6>
+        <h6>**We do have some older hardware for the pupose of discord bot hosting or other software that are less resource demanding</h6></div>
     </section>
     <section data-bs-version="5.1" class="footer4 cid-trTRH3RkBb" once="footers" id="footer4-j">
         <div class="container">
